--- a/app/views/questions/answer_already_answered.html.erb
+++ b/app/views/questions/answer_already_answered.html.erb
@@ -1,6 +1,6 @@
-<h2 style="margin-bottom: 20px;">Vielen Dank.</h2>
+<h2 style="margin-bottom: 20px;">Schon geantwortet...</h2>
 
-<p class="lead">Ihre Antwort <strong><%= @given_answer %></strong> wurde vermerkt.</p>
+<p class="lead">Sie hatten die aktuelle Frage bereits beantwortet.</p>
 <p class="lead">Bitte warten Sie bis zur nächsten Frage-Runde und wählen Sie dann unten "Zur nächsten Frage".</p>
 
 <%= form_tag '/questions/show', method: :get do %>
