--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,15 @@
   <div class="container">
     <div class="content">
       <div class="row">
+        <div class="span12">
+          <% flash.each do |name, msg| %>
+            <div class="alert alert-<%= name == :notice ? "success" : "error" %>" style="margin-top: 10px;">
+              <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      <div class="row">
          <div class="span12">
             <%= yield %>
           </div>
