So einiges geht nun.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     ================================================== -->
     <!-- Placed at the top of the document so jquery works in templates... -->
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "questions" %>
 
   </head>
   <body>
