--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -31,7 +31,7 @@
       }
 
       table {
-        font-size: 30px;
+        font-size: 25px;
       }
 
       @font-face {
@@ -91,5 +91,10 @@
       </div>
 
     </div>
+
+  <audio autobuffer src="/antwort.wav" preload="auto" id="answer_audio" style="display: none;">
+  </audio>
+  <audio autobuffer src="/bling2.wav" preload="auto" id="points_audio" style="display: none;">
+  </audio>
   </body>
 </html>
