--- a/app/views/presentation/_showing_question.html.erb
+++ b/app/views/presentation/_showing_question.html.erb
@@ -1,5 +1,5 @@
-<table style="height: 670px;">
+<table style="height: 670px; width: 100%;">
   <tr>
-    <td valign="center"><center><h1><%= question.text %></h1><center></td>
+    <td valign="center"><center><h1><%= question.text %></h1></center></td>
   </tr>
 </table>
