--- a/app/views/presentation/_showing_estimation_answer.html.erb
+++ b/app/views/presentation/_showing_estimation_answer.html.erb
@@ -1,7 +1,7 @@
-<table style="height: 670px;">
+<table style="height: 670px; width: 100%;">
   <tr>
     <td valign="center">
-      <center><h2><%= question.text %></h2></center>
+      <center><h1><%= question.text %></h1></center>
       <center><h1><%= question.average_estimation.round(3) %></h1></center>
     </td>
   </tr>
