--- a/app/views/presentation/_starting.html.erb
+++ b/app/views/presentation/_starting.html.erb
@@ -1,5 +1,3 @@
-<center style="margin-top: 250px;">
-<h1>
-Wilkommen zum <br /> Fachbereichsduell
-</h1>
+<center style="padding-top: 180px; margin-top: 0px;">
+  <%= image_tag "logo.png" %>
 </center>
