--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -96,5 +96,7 @@
   </audio>
   <audio autobuffer src="/bling2.wav" preload="auto" id="points_audio" style="display: none;">
   </audio>
+  <audio autobuffer src="/zonk.wav" preload="auto" id="zonk_audio" style="display: none;">
+  </audio>
   </body>
 </html>
