--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -27,7 +27,11 @@
 
 <% elsif @game_state.showing_answers? %>
 
-  <%= bootstrap_admin_button_form("Nächste Frage", "/admin/next_question", { state: GameState::STATE_GUESSING_WITH_CHOICES }, "btn-danger pull-right") %>
+  <% if Question.find_by_number(GameState.instance.question_number + 1) %>
+    <%= bootstrap_admin_button_form("Nächste Frage", "/admin/next_question", { state: GameState::STATE_GUESSING_WITH_CHOICES }, "btn-danger pull-right") %>
+  <% else %>
+    <%= bootstrap_admin_button_form("Spiel beenden", "/admin/change_state", { state: GameState::STATE_GAME_OVER }, "btn-danger pull-right") %>
+  <% end %>
 
 <% end %>
 
