Sound und doppelte Route

--- a/app/views/presentation/_showing_question.html.erb
+++ b/app/views/presentation/_showing_question.html.erb
@@ -3,3 +3,8 @@
     <td valign="center"><center><h1><%= question.text %></h1></center></td>
   </tr>
 </table>
+
+<!-- hier kann das nicht abgespielt werden weil vorher ja die Frage verlesen werden soll
+<audio autobuffer src="/abstimmung.wav" preload="auto" autoplay="autoplay" style="display: none;">
+</audio>
+-->
