--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -66,7 +66,7 @@
       .footer-container {
         position: absolute;
         left: 0;
-        top: 673px;
+        top: 0px;
         width: 1021px;
       }
 
@@ -74,9 +74,6 @@
   </head>
   <body>
     <div class="container">
-      <div id="ajax-container">
-      </div>
-
       <div class="footer-container">
         <div class="footer-line">
         </div>
@@ -90,6 +87,8 @@
         </table>
       </div>
 
+      <div id="ajax-container" style="margin-top: 100px;">
+      </div>
     </div>
 
   <audio autobuffer src="/antwort.wav" preload="auto" id="answer_audio" style="display: none;">
