Alles wie vorher

--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -66,7 +66,7 @@
       .footer-container {
         position: absolute;
         left: 0;
-        top: 0px;
+        top: 673px;
         width: 1021px;
       }
 
@@ -74,6 +74,9 @@
   </head>
   <body>
     <div class="container">
+      <div id="ajax-container">
+      </div>
+
       <div class="footer-container">
         <div class="footer-line">
         </div>
@@ -87,8 +90,6 @@
         </table>
       </div>
 
-      <div id="ajax-container" style="margin-top: 100px;">
-      </div>
     </div>
 
   <audio autobuffer src="/antwort.wav" preload="auto" id="answer_audio" style="display: none;">
