--- a/app/views/presentation/_showing_question.html.erb
+++ b/app/views/presentation/_showing_question.html.erb
@@ -1,4 +1,4 @@
-<table style="height: 670px; width: 100%;">
+<table id="question_table" style="height: 670px; width: 100%; position: absolute;">
   <tr>
     <td valign="center"><center><h1><%= question.text %></h1></center></td>
   </tr>
