--- a/app/views/presentation/index.html.erb
+++ b/app/views/presentation/index.html.erb
@@ -82,9 +82,9 @@
         
         <table cellspacing="0" style="width: 100%;" class="footer">
           <tr>
-            <td style="width: 250px;"><span id="team_1_points_and_xes">42</span> <span class="pres_name">Rollinger</span></td>
-            <td style="text-align: center;"><span id="round-nr"></span></td>
-            <td style="text-align: right; width: 250px;"><span class="pres_name">Lücke</span> <span id="team_2_points_and_xes">52</span></td>
+            <td style="width: 250px;"><span id="team_1_points">0</span> <span class="pres_name">Rollinger</span></td>
+            <td style="text-align: center;"><span id="round-nr" style="font-size: 30px;"></span></td>
+            <td style="text-align: right; width: 250px;"><span class="pres_name">Lücke</span> <span id="team_2_points">0</span></td>
           </tr>
         </table>
 
